fix for outline on mobile (try 1)

--- a/assets/css/sass/styles.scss
+++ b/assets/css/sass/styles.scss
@@ -320,12 +320,15 @@ article ul {
 	clear:left;
 }
 
+.portfolio-item-image,
+.portfolio-gallery-item a { 
+	display:block;
+}
 
 .portfolio-gallery-item a:hover,
 .portfolio-item-image:hover,
 .portfolio-gallery-item:hover { 
 	background-color: transparent; 
-
 }
 
 
